--- a/Mailo.csproj
+++ b/Mailo.csproj
@@ -7,12 +7,26 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="wwwroot\images\logo.jpg" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="wwwroot\images\hodi_size.jpg" />
+    <Page Include="wwwroot\images\part_of_logo4.jpg" />
+    <Page Include="wwwroot\images\sweet-shirt-boy-black.jpg" />
+    <Page Include="wwwroot\images\sweet-shirt-boy.jpg" />
+    <Page Include="wwwroot\images\sweet-shirt-girl-white.jpg" />
+    <Page Include="wwwroot\images\sweet-shirt-girl.jpg" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.10">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.6" />
   </ItemGroup>
 
 </Project>
