--- a/appsettings.json
+++ b/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "ConStr": "Server=DESKTOP-UFGNSV0;Database=Mailo;User Id=mayar;Password=1234;Integrated Security=True;Trust Server Certificate=True;"
+    "ConStr": "Server=.;Database=Mailo;Trusted_Connection=True;Integrated Security=True;Trust Server Certificate=True;"
   },
   "AllowedHosts": "*"
 }
